--- a/src/components/map.css
+++ b/src/components/map.css
@@ -6,8 +6,8 @@
     margin-bottom: 60px;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
-    padding: 15px;
+    width: 80%;
+    padding: 20px 30px 30px 30px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 15px;
 }
@@ -16,4 +16,13 @@
     width: 30px;
     height: 30px;
     margin-top: -14px;
+}
+
+.rc-slider-mark {
+    margin-top: 5px;
+}
+
+.rc-slider-mark-text{
+    font-size: 14px;
+    color: white;
 }
