--- a/src/components/map.css
+++ b/src/components/map.css
@@ -30,3 +30,16 @@
 .popup-holder {
     text-align: center;
 }
+
+.slider-desc-text {
+    position: absolute;
+    bottom: 0;
+    color: white;
+    left: 0;
+    right: 0;
+    margin-bottom: 130px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 16px;
+}
