--- a/src/components/map.css
+++ b/src/components/map.css
@@ -10,6 +10,7 @@
     padding: 20px 30px 30px 30px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 15px;
+    z-index: 100;
 }
 
 .rc-slider-handle {
