--- a/src/components/map.css
+++ b/src/components/map.css
@@ -44,3 +44,16 @@
     text-align: center;
     font-size: 16px;
 }
+
+.chart-button {
+    margin-left: 5px;
+    border: none;
+    border: 1px solid gray;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.chart-button > img {
+    width: 10px;
+    height: 10px;
+}
